<resources>
    <string name="app_name">Net Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首页</string>
    <string name="menu_temphumi">温湿度</string>
    <string name="menu_light">光照强度</string>
    <string name="menu_mq2">烟雾浓度</string>
    <string name="menu_mqtt">MQTT助手</string>
    <string name="menu_contact">联系我们</string>
    <string name="menu_control">远程控制</string>
</resources>